force-app/main/default/objects/Mobi_Email_Notification__e/Mobi_Email_Notification__e.object-meta.xml
<CustomObject>
    <description>Platform Event fired when a visitor submits a form on the Mobiliar demo website. Triggers a branded welcome email via Apex trigger.</description>
    <label>Mobi Email Notification</label>
    <pluralLabel>Mobi Email Notifications</pluralLabel>
</CustomObject>