force-app/main/default/objects/Mobi_Email_Notification__e/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <description>Insurance product or event name</description>
    <label>Product</label>
    <length>255</length>
    <type>Text</type>
</CustomField>