force-app/main/default/objects/Mobi_Email_Notification__e/fields/Recipient_Email__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Email__c</fullName>
    <description>Email address of the form submitter</description>
    <label>Recipient Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>