force-app/main/default/objects/Mobi_Email_Notification__e/fields/Recipient_Name__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Name__c</fullName>
    <description>Full name of the form submitter</description>
    <label>Recipient Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>