force-app/main/default/objects/Mobi_Email_Notification__e/fields/Subject_Line__c.field-meta.xml
<CustomField>
    <fullName>Subject_Line__c</fullName>
    <description>Email subject line</description>
    <label>Subject Line</label>
    <length>255</length>
    <type>Text</type>
</CustomField>